<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="github_name">Github Name</string>
    <string name="github_username">\@%s</string>
    <string name="github_company">Github Company</string>
    <string name="followers_1000">%s Followers</string>
    <string name="following_100">%s Following</string>
    <string name="repositories_100">: %s</string>
    <string name="github_location">Github Location</string>
    <string name="followers_following">Followers Following</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="no_data">No Data</string>
</resources>