<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:src="@android:color/darker_gray"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/github_name"
            android:textColor="@color/purple_700"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_tv"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp"
            android:text="@string/github_username"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_repository"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/repositories_100"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_corners"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/followers_1000"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/tv_repositories"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/following_100"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/tv_followers"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>